--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
       <h1 class="main__headline">Jak to działa?</h1>
       <div class="student__wrapper">
 
-        <p class="student__for">Dla studenta</p>
+
         <div class="student__block">
           <div class="student-img__container">
             <img src="img/8.png" alt="" class="student__img" width="708" height="746">
           </div>
           <div class="student-text__container">
+            <p class="student__text student__for">Dla studenta</p>
             <p class="student__text student__text--begin">Kliknij „rozpocznij swoją karierę” </p>
             <p class="student__text">Porozmawiaj z naszym botem</p>
             <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
@@ -80,9 +81,9 @@
        </div>
 
         <div class="emp__wrapper">
-         <p class="emp__for">Dla pracodawcy</p>
           <div class="emp__block">
            <div class="emp-text__container">
+             <p class="emp__text emp__for">Dla pracodawcy</p>
               <p class="emp__text emp__text--begin">Skontaktuj się z nami przez formularz zgłoszeniowy zamieszczony poniżej </p>
               <p class="emp__text">Określ swoje kryteria wobec kandydata</p>
               <p class="emp__text">Uzyskaj dostęp do wyselekcjonowanych profili kandydatów </p>
