--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="header__container">
       <p class="header__motto">Matchup to platforma łącząca pracowników i pracodawców. Za pomocą naszego systemu dopasowania znajdziesz ofertę pracy, która spełnia twoje wymagania. </p>
-      <a href="#" class="header__link button">Start kariery</a>
+      <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
     </div>
   </header>
@@ -31,8 +31,6 @@
     <div class="main__wrapper">
       <h1 class="main__headline">Jak to działa?</h1>
       <div class="student__wrapper">
-
-
         <div class="student__block">
           <div class="student-img__container">
             <img src="img/8.png" alt="" class="student__img" width="708" height="746">
@@ -43,7 +41,7 @@
             <p class="student__text">Porozmawiaj z naszym botem</p>
             <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
             <p class="student__text student__text--end">Umów się na spotkanie rekrutacyjne</p>
-            <a href="#" class="student__button button">Start kariery</a>
+            <a href="bot.html" class="student__button button">Start kariery</a>
           </div>
         </div>
 
@@ -73,7 +71,7 @@
        <div class="life__container">
          <div class="life__wrapper">
            <h2 class="life__headline">Zmień swoje życie</h2>
-           <a href="#" class="life__button button">Start kariery</a>
+           <a href="bot.html" class="life__button button">Start kariery</a>
          </div>
          <div class="life-container__img">
            <img src="img/5.png" alt="" class="life__img" width="693" height="524" />
@@ -135,7 +133,7 @@
                 <p class="form__text">Comment </p><textarea  cols="30" rows="10" class="form__textarea"></textarea>
               </label>
             </form>
-            <input type="submit" value="Wyślij" class="form__input"/>
+            <input type="submit" value="Wyślij" class="form__input button"/>
           </div>
         </div>
         </div>
