--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
           <div class="student-text__container">
             <p class="student__text student__for">Dla studenta</p>
             <p class="student__text student__text--begin">Kliknij „rozpocznij swoją karierę” </p>
+            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
             <p class="student__text">Porozmawiaj z naszym botem</p>
+            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
             <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
+            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
             <p class="student__text student__text--end">Umów się na spotkanie rekrutacyjne</p>
             <a href="bot.html" class="student__button button">Start kariery</a>
           </div>
