--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div>
           </div>
         </div>
+        
         <div class="form__container">
           <div class="form-img__container">
             <img src="img/2.png" alt="" class="form__img" width="473" height="525">
@@ -144,6 +145,58 @@
           </div>
         </div>
         </div>
+        
+        <div class="faq-wrapper">
+        <div class="faq-header">Najczęściej zadawane pytania </div>
+      <div class="faq-content">
+        <div class="faq-question">
+          <input id="q1" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q1" class="panel-title">Czym się zajmuje MatchUp?</label>
+          <div class="panel-content">MatchUP jest nową platformą internetową łączącą w przejrzysty sposób
+      pracodawców i pracowników. Dzięki niej znajdziesz pracę, która będzie dostosowana
+      do twoich potrzeb w 100%.</div>
+        </div>
+
+        <div class="faq-question">
+          <input id="q2" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q2" class="panel-title">Korzystanie z MatchUp jest bezpieczne?</label>
+          <div class="panel-content">Oczywiście! Stosujemy wszystkich zasad polityki ochrony danych personalnych.
+      Twoje dane personalne trafiają bezpośrednio do pracodawcy.!</div>
+        </div>
+
+        <div class="faq-question">
+          <input id="q3" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q3" class="panel-title">Czy MatchUp jest bezpłatny?</label>
+          <div class="panel-content">Tak, nie ponosisz żadnych kosztów za korzystanie z naszej platformy.</div>
+        </div>
+
+          <div class="faq-question">
+          <input id="q4" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q4" class="panel-title">Czy moje wynagrodzenie nie będzie mniejsze przez korzystanie z usług MatchUpu?</label>
+          <div class="panel-content">Twoje wynagrodzenie będzie dokładnie takie, gdybyś sam znalazł tę ofertę.</div>
+        </div>
+
+            <div class="faq-question">
+          <input id="q5" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q5" class="panel-title">Nie mam doświadczenia zawodowego, czy mogę korzystać z platformy?</label>
+          <div class="panel-content">Tak, pomagamy studentom w znalezieniu swojego pierwszego płatnego stażu!</div>
+        </div>
+
+              <div class="faq-question">
+          <input id="q6" type="checkbox" class="panel">
+          <div class="plus">+</div>
+          <label for="q6" class="panel-title">Nie szukam pracy teraz.?</label>
+          <div class="panel-content">Możesz zostawić swoje dane na naszej platformie i być na bieżąco z najlepszymi
+      ofertami pracy.</div>
+        </div>
+      </div>
+    </div>
+
 
   </main>
 
