--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </ul>
     </div>
     <div class="header__container">
-     <h3 class="header__headline">Daj się znaleźć</h3>
       <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
       <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
@@ -111,10 +110,6 @@
 
 
 
-        <div class="form__container">
-          <div class="form-img__container">
-            <img src="img/2.png" alt="" class="form__img" width="473" height="525">
-          </div>
 
           <div class="faq-wrapper">
             <div class="faq-header">Najczęściej zadawane pytania </div>
@@ -166,28 +161,31 @@
           </div>
         </div>
       </div>
-      </div>
-
+          
+           <div class="form__container">
+          <div class="form-img__container">
+          <img src="img/2.png" alt="" class="form__img" width="473" height="525">
+          </div>
           <div class="form__block">
+           <h3 class="form__headline">Skontaktuj się z nami poprzez formularz zgłoszeniowy!</h3>
             <div class="form__wrapper">
               <form action="post" class="form">
                 <label class="form__label">
-                  <p class="form__text">Name </p><input type="text" class="form__name" />
+                  <input type="text" class="form__name" placeholder="Imie"/>
                 </label>
 
                 <label class="form__label">
-                  <p class="form__text">Email Address </p><input type="text" class="form__email" />
+                  <input type="text" class="form__email" placeholder="Email Address" />
                 </label>
 
                 <label class="form__label">
-                  <p class="form__text">Comment </p><textarea  cols="30" rows="10" class="form__textarea"></textarea>
+                  <textarea  cols="30" rows="10" class="form__textarea" placeholder="Treść"></textarea>
                 </label>
               </form>
-              <input type="submit" value="Wyślij" class="form__input button"/>
+              <input type="submit" value="Wyślij" class="form__input "/>
             </div>
           </div>
-        </div>
-
+         </div>
   </main>
 
   <div class="footer">
