--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +9,22 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <header class="header">
-   <div class="header__block">
-    <div class="header__wrapper">
-      <a href="" class="header__logo">MatchUP</a>
-      <ul class="header__nav">
-        <li class="nav__item"><a href="#">Student</a></li>
-        <li class="nav__item"><a href="#">Pracodawca</a></li>
-        <li class="nav__item"><a href="#">Kontakt</a></li>
-      </ul>
-    </div>
-    <div class="header__container">
-      <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
-      <a href="bot.html" class="header__link button">Start kariery</a>
+    <div class="header__block">
+      <div class="header__wrapper">
+        <a href="index.html"><img src="img/logo.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
+        <ul class="header__nav">
+          <li class="nav__item"><a href="#">Student</a></li>
+          <li class="nav__item"><a href="#">Pracodawca</a></li>
+          <li class="nav__item"><a href="#">Kontakt</a></li>
+        </ul>
+      </div>
+      <div class="header__container">
+        <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
+        <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
     </div>
   </header>
@@ -32,26 +34,26 @@
       <h1 class="main__headline">Jak to działa?</h1>
       <div class="student__wrapper">
 
-               <div class="student__advantages">
-         <div class="student-advantages__container">
-          <div class="advantages__block advantages__block--student">
-            <img src="img/c1.png" alt="" class="advantages__image" width="160" height="100"/>
-            <p class="advantages__item">Czas</p>
-            <p class="advantages__text">Nie musisz spędzać czasu na portalach pracy i sieciach społecznościowych- jednorazowy upload CV zapewni ci dostęp do wielu ofert pracy</p>
-          </div>
+        <div class="student__advantages">
+          <div class="student-advantages__container">
+            <div class="advantages__block advantages__block--student">
+              <img src="img/c1.png" alt="" class="advantages__image" width="160" height="100"/>
+              <p class="advantages__item">Czas</p>
+              <p class="advantages__text">Nie musisz spędzać czasu na portalach pracy i sieciach społecznościowych- jednorazowy upload CV zapewni ci dostęp do wielu ofert pracy</p>
+            </div>
 
-          <div class="advantages__block advantages__block--student">
-            <img src="img/c2.png" alt="" class="advantages__image" width="160" height="100"/>
-            <p class="advantages__item">Dopasowana oferta</p>
-            <p class="advantages__text"> Otrzymujesz ofertę, która jest w pełni zgodna z określonymi przez ciebie kryteriami. </p>
-          </div>
+            <div class="advantages__block advantages__block--student">
+              <img src="img/c2.png" alt="" class="advantages__image" width="160" height="100"/>
+              <p class="advantages__item">Dopasowana oferta</p>
+              <p class="advantages__text"> Otrzymujesz ofertę, która jest w pełni zgodna z określonymi przez ciebie kryteriami. </p>
+            </div>
 
-          <div class="advantages__block advantages__block--student">
-            <img src="img/c4.png" alt="" class="advantages__image" width="160" height="100"/>
-            <p class="advantages__item">Bezpieczeństwo</p>
-            <p class="advantages__text">Matchup korzysta z chronionej bazy danych, dzięki temu twoje dane osobowe nie zostaną wykorzystane w celach innych niż proces rekrutacyjny przeprowadzany przez MatchUp. </p>
+            <div class="advantages__block advantages__block--student">
+              <img src="img/c4.png" alt="" class="advantages__image" width="160" height="100"/>
+              <p class="advantages__item">Bezpieczeństwo</p>
+              <p class="advantages__text">Matchup korzysta z chronionej bazy danych, dzięki temu twoje dane osobowe nie zostaną wykorzystane w celach innych niż proces rekrutacyjny przeprowadzany przez MatchUp. </p>
+            </div>
           </div>
-        </div>
         </div>
 
         <div class="student__block">
@@ -60,29 +62,29 @@
           </div>
 
 
-          <div class="student-text__container">
-            <p class="student__text student__for">Dla studenta</p>
-            <p class="student__text student__text--begin">Kliknij „rozpocznij swoją karierę” </p>
-            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-            <p class="student__text">Porozmawiaj z naszym botem</p>
-            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-            <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
-            <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-            <p class="student__text student__text--end">Umów się na spotkanie rekrutacyjne</p>
-            <a href="bot.html" class="student__button button">Start kariery</a>
+            <div class="student-text__container">
+              <p class="student__text student__for">Dla studenta</p>
+              <p class="student__text student__text--begin">Kliknij „rozpocznij swoją karierę” </p>
+              <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
+              <p class="student__text">Porozmawiaj z naszym botem</p>
+              <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
+              <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
+                <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
+                <p class="student__text student__text--end">Umów się na spotkanie rekrutacyjne</p>
+                <a href="bot.html" class="student__button button">Start kariery</a>
+            </div>
           </div>
         </div>
-      </div>
 
-       <div class="life__container">
-         <div class="life__wrapper">
-           <h2 class="life__headline">Zmień swoje życie</h2>
-           <a href="bot.html" class="life__button button">Start kariery</a>
+        <div class="life__container">
+          <div class="life__wrapper">
+            <h2 class="life__headline">Zmień swoje życie</h2>
+            <a href="bot.html" class="life__button button">Start kariery</a>
+          </div>
+          <div class="life-container__img">
+            <img src="img/5.png" alt="" class="life__img" width="693" height="524" />
          </div>
-         <div class="life-container__img">
-           <img src="img/5.png" alt="" class="life__img" width="693" height="524" />
-         </div>
-       </div>
+          </div>
 
 
           <div class="emp__advantages">
@@ -111,81 +113,81 @@
 
 
 
-          <div class="faq-wrapper">
-            <div class="faq-header">Najczęściej zadawane pytania </div>
-            <div class="faq-content">
+        <div class="faq-wrapper">
+          <div class="faq-header">Najczęściej zadawane pytania </div>
+          <div class="faq-content">
             <div class="faq-question">
-            <input id="q1" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q1" class="panel-title">Czym się zajmuje MatchUp?</label>
-            <div class="panel-content">MatchUP jest nową platformą internetową łączącą w przejrzysty sposób
-        pracodawców i pracowników. Dzięki niej znajdziesz pracę, która będzie dostosowana
-        do twoich potrzeb w 100%.</div>
-          </div>
-
-          <div class="faq-question">
-            <input id="q2" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q2" class="panel-title">Korzystanie z MatchUp jest bezpieczne?</label>
-            <div class="panel-content">Oczywiście! Stosujemy wszystkich zasad polityki ochrony danych personalnych.
-        Twoje dane personalne trafiają bezpośrednio do pracodawcy.!</div>
-          </div>
-
-          <div class="faq-question">
-            <input id="q3" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q3" class="panel-title">Czy MatchUp jest bezpłatny?</label>
-            <div class="panel-content">Tak, nie ponosisz żadnych kosztów za korzystanie z naszej platformy.</div>
-          </div>
+              <input id="q1" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q1" class="panel-title">Czym się zajmuje MatchUp?</label>
+              <div class="panel-content">MatchUP jest nową platformą internetową łączącą w przejrzysty sposób
+                pracodawców i pracowników. Dzięki niej znajdziesz pracę, która będzie dostosowana
+                do twoich potrzeb w 100%.</div>
+            </div>
 
             <div class="faq-question">
-            <input id="q4" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q4" class="panel-title">Czy moje wynagrodzenie nie będzie mniejsze przez korzystanie z usług MatchUpu?</label>
-            <div class="panel-content">Twoje wynagrodzenie będzie dokładnie takie, gdybyś sam znalazł tę ofertę.</div>
-          </div>
+              <input id="q2" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q2" class="panel-title">Korzystanie z MatchUp jest bezpieczne?</label>
+              <div class="panel-content">Oczywiście! Stosujemy wszystkich zasad polityki ochrony danych personalnych.
+                Twoje dane personalne trafiają bezpośrednio do pracodawcy.!</div>
+            </div>
 
-              <div class="faq-question">
-            <input id="q5" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q5" class="panel-title">Nie mam doświadczenia zawodowego, czy mogę korzystać z platformy?</label>
-            <div class="panel-content">Tak, pomagamy studentom w znalezieniu swojego pierwszego płatnego stażu!</div>
-          </div>
+            <div class="faq-question">
+              <input id="q3" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q3" class="panel-title">Czy MatchUp jest bezpłatny?</label>
+              <div class="panel-content">Tak, nie ponosisz żadnych kosztów za korzystanie z naszej platformy.</div>
+            </div>
 
-                <div class="faq-question">
-            <input id="q6" type="checkbox" class="panel">
-            <div class="plus">+</div>
-            <label for="q6" class="panel-title">Nie szukam pracy teraz.?</label>
-            <div class="panel-content">Możesz zostawić swoje dane na naszej platformie i być na bieżąco z najlepszymi
-        ofertami pracy.</div>
+            <div class="faq-question">
+              <input id="q4" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q4" class="panel-title">Czy moje wynagrodzenie nie będzie mniejsze przez korzystanie z usług MatchUpu?</label>
+              <div class="panel-content">Twoje wynagrodzenie będzie dokładnie takie, gdybyś sam znalazł tę ofertę.</div>
+            </div>
+
+            <div class="faq-question">
+              <input id="q5" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q5" class="panel-title">Nie mam doświadczenia zawodowego, czy mogę korzystać z platformy?</label>
+              <div class="panel-content">Tak, pomagamy studentom w znalezieniu swojego pierwszego płatnego stażu!</div>
+            </div>
+
+            <div class="faq-question">
+              <input id="q6" type="checkbox" class="panel">
+              <div class="plus">+</div>
+              <label for="q6" class="panel-title">Nie szukam pracy teraz.?</label>
+              <div class="panel-content">Możesz zostawić swoje dane na naszej platformie i być na bieżąco z najlepszymi
+                ofertami pracy.</div>
+            </div>
           </div>
         </div>
-      </div>
-          
-           <div class="form__container">
+
+        <div class="form__container">
           <div class="form-img__container">
-          <img src="img/2.png" alt="" class="form__img" width="473" height="525">
+            <img src="img/2.png" alt="" class="form__img" width="473" height="525">
           </div>
-          <div class="form__block">
-           <h3 class="form__headline">Skontaktuj się z nami poprzez formularz zgłoszeniowy!</h3>
-            <div class="form__wrapper">
-              <form action="post" class="form">
-                <label class="form__label">
+            <div class="form__block">
+              <h3 class="form__headline">Skontaktuj się z nami poprzez formularz zgłoszeniowy!</h3>
+              <div class="form__wrapper">
+                <form action="post" class="form">
+                  <label class="form__label">
                   <input type="text" class="form__name" placeholder="Imie"/>
                 </label>
 
-                <label class="form__label">
+                  <label class="form__label">
                   <input type="text" class="form__email" placeholder="Email Address" />
                 </label>
 
-                <label class="form__label">
+                  <label class="form__label">
                   <textarea  cols="30" rows="10" class="form__textarea" placeholder="Treść"></textarea>
                 </label>
-              </form>
-              <input type="submit" value="Wyślij" class="form__input "/>
+                </form>
+                <input type="submit" value="Wyślij" class="form__input "/>
             </div>
-          </div>
-         </div>
+              </div>
+            </div>
   </main>
 
   <div class="footer">
@@ -195,4 +197,5 @@
   </div>
 
 </body>
+
 </html>
