--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
   <header class="header">
     <div class="header__block">
       <div class="header__wrapper">
-        <a href="index.html"><img src="img/logo.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
+        <a href="index.html"><img src="img/logo3.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
         <ul class="header__nav">
           <li class="nav__item"><a href="#">Student</a></li>
           <li class="nav__item"><a href="#">Pracodawca</a></li>
@@ -23,9 +24,14 @@
         </ul>
       </div>
       <div class="header__container">
+        <h2 class="header__main">Lorem ipsum dolor sit.</h3>
         <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
         <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
+    </div>
+
+    <div class="header__arrow">
+      <a href="#anchor"><img  class="header__icon" src="img/icon__arrow.png" alt="" width="5" height="5"></a>
     </div>
   </header>
 
@@ -37,26 +43,26 @@
         <div class="student__advantages">
           <div class="student-advantages__container">
             <div class="advantages__block advantages__block--student">
-              <img src="img/c1.png" alt="" class="advantages__image" width="160" height="100"/>
+              <img src="img/icon_time.png" alt="" class="advantages__image" width="100" height="90"/>
               <p class="advantages__item">Czas</p>
               <p class="advantages__text">Nie musisz spędzać czasu na portalach pracy i sieciach społecznościowych- jednorazowy upload CV zapewni ci dostęp do wielu ofert pracy</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
-              <img src="img/c2.png" alt="" class="advantages__image" width="160" height="100"/>
+              <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="100" height="90"/>
               <p class="advantages__item">Dopasowana oferta</p>
               <p class="advantages__text"> Otrzymujesz ofertę, która jest w pełni zgodna z określonymi przez ciebie kryteriami. </p>
             </div>
 
             <div class="advantages__block advantages__block--student">
-              <img src="img/c4.png" alt="" class="advantages__image" width="160" height="100"/>
+              <img src="img/icon_security.png" alt="" class="advantages__image" width="100" height="90"/>
               <p class="advantages__item">Bezpieczeństwo</p>
               <p class="advantages__text">Matchup korzysta z chronionej bazy danych, dzięki temu twoje dane osobowe nie zostaną wykorzystane w celach innych niż proces rekrutacyjny przeprowadzany przez MatchUp. </p>
             </div>
           </div>
         </div>
 
-        <div class="student__block">
+        <div class="student__block" id="anchor">
           <div class="student-img__container">
             <img src="img/8.png" alt="" class="student__img" width="708" height="746">
           </div>
@@ -189,12 +195,14 @@
               </div>
             </div>
   </main>
-  
+
   <div class="footer">
     <div class="footer__container">
       <p class="footer__copyright">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quia!</p>
     </div>
   </div>
+
+  <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
