--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div class="header__wrapper">
         <a href="index.html"><img src="img/logo3.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
         <ul class="header__nav">
-          <li class="nav__item"><a href="#">Student</a></li>
+          <li class="nav__item"><a href="#student">Student</a></li>
           <li class="nav__item"><a href="#">Pracodawca</a></li>
           <li class="nav__item"><a href="#">Kontakt</a></li>
         </ul>
       </div>
       <div class="header__container">
-        <h2 class="header__main">Lorem ipsum dolor sit.</h3>
+        <h2 class="header__main">Lorem ipsum dolor sit.</h2>
         <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
         <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
@@ -40,7 +40,7 @@
       <h1 class="main__headline">Jak to działa?</h1>
       <div class="student__wrapper">
 
-        <div class="student__advantages">
+        <div class="student__advantages" id="student">
           <div class="student-advantages__container">
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_time.png" alt="" class="advantages__image" width="100" height="90"/>
