--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <div class="header__wrapper">
         <a href="index.html"><img src="img/logo3.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
         <ul class="header__nav">
-          <li class="nav__item"><a href="#student">Student</a></li>
-          <li class="nav__item"><a href="#">Pracodawca</a></li>
+          <li class="nav__item"><a href="#student">Jak to działa</a></li>
+          <li class="nav__item"><a href="#">Usługa</a></li>
           <li class="nav__item"><a href="#">Kontakt</a></li>
         </ul>
       </div>
       <div class="header__container">
-        <h2 class="header__main">Lorem ipsum dolor sit.</h2>
-        <p class="header__motto">Skorzystaj z darmowej platformy i poczekaj, aż pracodawca znajdzie Ciebie. Kliknij „START”, poozmawiaj z naszym chatbotem i sprawdź co dla Ciebie przygotowaliśmy. </p>
+        <h2 class="header__main">Najprostszy sposób na znalezienie wymarzonej pracy</h2>
+        <p class="header__motto">Określ swoje potrzeby dotyczące nowej pracy w krótkiej rozmowie z chatbotem, a następnie otrzymaj dopasowane oferty. Szybko i bez stresu.</p>
         <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
     </div>
@@ -90,30 +90,7 @@
           <div class="life-container__img">
             <img src="img/5.png" alt="" class="life__img" width="693" height="524" />
          </div>
-          </div>
-
-
-          <div class="emp__advantages">
-            <div class="emp-advantages__container">
-              <div class="advantages__block advantages__block--emp">
-                <img src="img/c5.png" alt="" class="advantages__image" width="160" height="100"/>
-                <p class="advantages__item">Czas</p>
-                <p class="advantages__text">za pomocą MatchUp pomijasz wstępną selekcję kandydatów.</p>
-              </div>
-
-              <div class="advantages__block advantages__block--emp">
-                <img src="img/c7.png" alt="" class="advantages__image" width="160" height="100"/>
-                <p class="advantages__item">Dokładność</p>
-                <p class="advantages__text">Otrzymane profile w 100% spełniają wcześniej określone kryteria </p>
-              </div>
-
-              <div class="advantages__block advantages__block--emp">
-                <img src="img/c8.png" alt="" class="advantages__image" width="160" height="100"/>
-                <p class="advantages__item">Środowisko</p>
-                <p class="advantages__text">MatchUp współpracuje z największymi uniwersytetami w Polsce co pozwała na dostęp do najlepszych kandydatów</p>
-              </div>
-            </div>
-          </div>
+       </div>
         </div>
 
 
@@ -198,7 +175,13 @@
 
   <div class="footer">
     <div class="footer__container">
-      <p class="footer__copyright">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quia!</p>
+      <p class="footer__copyright">© Match-UP.me</p>
+      <a href="#" class="footer__policy">Polityka prywatności</a>
+      <li class="footer__list">
+        <a href=""><img src="" alt="" class="footer__icon"></a>
+        <a href=""><img src="" alt="" class="footer__icon"></a>
+        <a href=""><img src="" alt="" class="footer__icon"></a>
+      </li>
     </div>
   </div>
 
