--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header__wrapper">
         <a href="index.html"><img src="img/logo3.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
         <ul class="header__nav">
-          <li class="nav__item"><a href="#student">Jak to działa</a></li>
+          <li class="nav__item"><a href="#student">Start</a></li>
           <li class="nav__item"><a href="#">Usługa</a></li>
           <li class="nav__item"><a href="#">Kontakt</a></li>
         </ul>
@@ -37,27 +37,27 @@
 
   <main>
     <div class="main__wrapper">
-      <h1 class="main__headline">Jak to działa?</h1>
+      <h1 class="main__headline">Czasochłonne przeszukiwanie ogłoszeń, hurtowe rozsyłanie CV oraz niepewność co do wymagań pracodawcy. Brzmi znajomo? Korzystając z Matchup możesz ominąć tę część szukania pracy. </h1>
       <div class="student__wrapper">
 
         <div class="student__advantages" id="student">
           <div class="student-advantages__container">
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_time.png" alt="" class="advantages__image" width="100" height="90"/>
-              <p class="advantages__item">Czas</p>
-              <p class="advantages__text">Nie musisz spędzać czasu na portalach pracy i sieciach społecznościowych- jednorazowy upload CV zapewni ci dostęp do wielu ofert pracy</p>
+              <p class="advantages__item">Świeżość</p>
+              <p class="advantages__text">MatchUp to nie jest kolejna strona z ogłoszeniami. Zmieniamy zasady. Mówisz czego potrzebujesz, a potem czekasz na oferty od pracodawców, którzy zapoznali się już z Twoim profilem  i wiedzą jaki masz potencjał. Nie ma negatywnych odpowiedzi.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="100" height="90"/>
-              <p class="advantages__item">Dopasowana oferta</p>
-              <p class="advantages__text"> Otrzymujesz ofertę, która jest w pełni zgodna z określonymi przez ciebie kryteriami. </p>
+              <p class="advantages__item">Kolejny formularz?</p>
+              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie infromacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wygodnie wpisać swoje odpowiedzi w okno konwersacji.​</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_security.png" alt="" class="advantages__image" width="100" height="90"/>
-              <p class="advantages__item">Bezpieczeństwo</p>
-              <p class="advantages__text">Matchup korzysta z chronionej bazy danych, dzięki temu twoje dane osobowe nie zostaną wykorzystane w celach innych niż proces rekrutacyjny przeprowadzany przez MatchUp. </p>
+              <p class="advantages__item">Dopasuj się</p>
+              <p class="advantages__text">Najwazniejszym elementem jest nasz system dopasowania. Określ swoje wymagania i umiejętności, a my zadbamy o to, żebyś otrzymał oferty pracy dopasowane do Twoich oczekiwań.</p>
             </div>
           </div>
         </div>
@@ -69,14 +69,14 @@
 
 
             <div class="student-text__container">
-              <p class="student__text student__for">Dla studenta</p>
-              <p class="student__text student__text--begin">Kliknij „rozpocznij swoją karierę” </p>
+              <p class="student__text student__for">Jak to działa?</p>
+              <p class="student__text student__text--begin">Kliknij przycisk „start kariery” </p>
               <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
               <p class="student__text">Porozmawiaj z naszym botem</p>
               <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-              <p class="student__text student__text--third">Czekaj na dopasowaną zgodnie z <br> formularzem ofertę pracy</p>
+              <p class="student__text student__text--third">Opowiedz nam o swoich oczekiwaniach i umiejętnościach</p>
                 <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-                <p class="student__text student__text--end">Umów się na spotkanie rekrutacyjne</p>
+                <p class="student__text student__text--end">Otrzymaj dopasowane oferty pracy</p>
                 <a href="bot.html" class="student__button button">Start kariery</a>
             </div>
           </div>
