--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,600&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/jquery.js"></script>
 </head>
@@ -37,8 +37,8 @@
 
   <main>
     <div class="main__wrapper">
-      <h1 class="main__headline">Czasochłonne przeszukiwanie ogłoszeń, hurtowe rozsyłanie CV oraz niepewność co do wymagań pracodawcy. Brzmi znajomo? Korzystając z Matchup możesz ominąć tę część szukania pracy. </h1>
       <div class="student__wrapper">
+        <h1 class="main__headline">Czasochłonne przeszukiwanie ogłoszeń, hurtowe rozsyłanie CV oraz niepewność co do wymagań pracodawcy. Brzmi znajomo? Korzystając z Matchup możesz ominąć tę część szukania pracy. </h1>
 
         <div class="student__advantages" id="student">
           <div class="student-advantages__container">
@@ -51,7 +51,7 @@
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="100" height="90"/>
               <p class="advantages__item">Kolejny formularz?</p>
-              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie infromacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wygodnie wpisać swoje odpowiedzi w okno konwersacji.​</p>
+              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie infromacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wygodnie wpisać swoje odpowiedzi w okno konwersacji.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
@@ -61,6 +61,7 @@
             </div>
           </div>
         </div>
+      </div>
 
         <div class="student__block" id="anchor">
           <div class="student-img__container">
@@ -91,10 +92,6 @@
             <img src="img/5.png" alt="" class="life__img" width="693" height="524" />
          </div>
        </div>
-        </div>
-
-
-
 
         <div class="faq-wrapper">
           <div class="faq-header">Najczęściej zadawane pytania </div>
@@ -164,13 +161,14 @@
                 </label>
 
                   <label class="form__label">
-                  <textarea  cols="30" rows="10" class="form__textarea" placeholder="Treść"></textarea>
+                  <textarea  cols="20" rows="5" class="form__textarea" placeholder="Wiadomość"></textarea>
                 </label>
                 </form>
-                <input type="submit" value="Wyślij" class="form__input "/>
+                <input type="submit" value="Wyślij" class="form__input button"/>
             </div>
               </div>
             </div>
+           
   </main>
 
   <div class="footer">
