--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
             <div class="student-text__container">
-              <p class="student__text student__for">Jak to działa?</p>
+              <p class="student__text student__for">Wymarzona praca w 4 kroki</p>
               <p class="student__text student__text--begin">Kliknij przycisk „start kariery” </p>
               <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
               <p class="student__text">Porozmawiaj z naszym botem</p>
@@ -168,7 +168,7 @@
             </div>
               </div>
             </div>
-           
+
   </main>
 
   <div class="footer">
