--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header">
     <div class="header__block">
       <div class="header__wrapper">
-        <a href="index.html"><img src="img/logo3.png" class="header__logo" alt="MatchUp" width="160" height="35"></a>
+        <a href="index.html"><img src="img/logo.png" class="header__logo" alt="MatchUp" width="180" height="40"></a>
         <ul class="header__nav">
           <li class="nav__item"><a href="#student">Start</a></li>
           <li class="nav__item"><a href="#">Usługa</a></li>
@@ -24,8 +24,8 @@
         </ul>
       </div>
       <div class="header__container">
-        <h2 class="header__main">Najprostszy sposób na znalezienie wymarzonej pracy</h2>
-        <p class="header__motto">Określ swoje potrzeby dotyczące nowej pracy w krótkiej rozmowie z chatbotem, a następnie otrzymaj dopasowane oferty. Szybko i bez stresu.</p>
+        <h2 class="header__main">Najprostszy sposób na znalezienie Twojej pracy</h2>
+        <p class="header__motto">Określ swoje potrzeby dotyczące nowej pracy w krótkiej rozmowie z chatbotem. Otrzymaj dopasowane oferty szybko i bez stresu.</p>
         <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
     </div>
@@ -82,6 +82,7 @@
             </div>
           </div>
         </div>
+
 
         <div class="life__container">
           <div class="life__wrapper">
