--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
       <div class="header__wrapper">
         <a href="index.html"><img src="img/logo.png" class="header__logo" alt="MatchUp" width="200" height="40"></a>
         <ul class="header__nav">
-          <li class="nav__item"><a href="#student">Start</a></li>
-          <li class="nav__item"><a href="#">Usługa</a></li>
-          <li class="nav__item"><a href="#">Kontakt</a></li>
+          <li class="nav__item"><a href="bot.html">Start</a></li>
+          <li class="nav__item"><a href="#student">Usługa</a></li>
+          <li class="nav__item"><a href="#contact">Kontakt</a></li>
         </ul>
       </div>
 
 
     </div>
     <div class="header__back">
-      <div class="header__img">
+      <div class="header__img--block">
         <img src="img/background.png" alt="" class="header__img" width="550" height="550">
       </div>
       <div class="header__container">
-        <h2 class="header__main">Lorem ipsum dolor sit amet.</h2>
+        <h2 class="header__main">Najprostszy sposób na znalezenie pracy</h2>
         <p class="header__motto">Określ swoje potrzeby dotyczące nowej pracy w krótkiej rozmowie z chatbotem. Otrzymaj dopasowane oferty szybko i bez stresu.</p>
         <a href="bot.html" class="header__link button">Start kariery</a>
       </div>
@@ -50,19 +50,19 @@
         <div class="student__advantages" id="student">
           <div class="student-advantages__container">
             <div class="advantages__block advantages__block--student">
-              <img src="img/icon_time.png" alt="" class="advantages__image" width="100" height="90"/>
+              <img src="img/icon_time.png" alt="" class="advantages__image" width="124" height="124"/>
               <p class="advantages__item">Świeżość</p>
-              <p class="advantages__text"> Zmieniamy zasady. Mówisz czego potrzebujesz, a potem czekasz na oferty od pracodawców, którzy zapoznali się już z Twoim profilem  i wiedzą jaki masz potencjał. Nie ma złych odpowiedzi.</p>
+              <p class="advantages__text">Matchup to nie jest kolejna strona z ogłoszeniami Zmieniamy zasady. Mówisz czego potrzebujesz, a potem czekasz na oferty od pracodawców, którzy zapoznali się już z Twoim profilem  i wiedzą jaki masz potencjał. Nie ma złych odpowiedzi.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
-              <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="100" height="90"/>
+              <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="124" height="124"/>
               <p class="advantages__item">Kolejny formularz?</p>
-              <p class="advantages__text"> Czas formularzy przemija. O wszystkie informacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wpisać swoje odpowiedzi w okno konwersacji.</p>
+              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie informacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wpisać swoje odpowiedzi w okno konwersacji.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
-              <img src="img/icon_security.png" alt="" class="advantages__image" width="100" height="90"/>
+              <img src="img/icon_security.png" alt="" class="advantages__image" width="124" height="124"/>
               <p class="advantages__item">Dopasuj się</p>
               <p class="advantages__text">Najważniejszym elementem jest nasz system dopasowania. Określ swoje wymagania i umiejętności a my zadbamy o to, żebyś otrzymał oferty pracy dopasowane do Twoich oczekiwań.</p>
             </div>
@@ -96,7 +96,7 @@
 
         <div class="life__container">
           <div class="life__wrapper">
-            <h2 class="life__headline">Tu będzie headline</h2>
+            <h2 class="life__headline">Czasochłonne przeszukiwanie ogłosze i hurtowe rozsyłanie CV? Omiń te kroki z Matchup!</h2>
             <a href="bot.html" class="life__button button">Start kariery</a>
           </div>
           <div class="life-container__img">
@@ -156,14 +156,14 @@
         </div>
 
           <div class="student__headline">
-            <p class=" student__headline">Tu będzie headline</p>
+            <p class=" student__headline">Masz pytania? Napisz do nas</p>
           </div>
 
-        <div class="form__container">
-          <form>
+        <div class="form__container"  id="contact">
+          <form action="https://formspree.io/alexlitvinovskiy@gmail.com" method="POST" />
             <input name="name" type="text" class="feedback-input" placeholder="Imię i nazwisko" />
             <input name="email" type="text" class="feedback-input" placeholder="E-mail" />
-            <textarea name="text" class="feedback-input" placeholder="Wiadomość"></textarea>
+            <textarea name="name" class="feedback-input" placeholder="Wiadomość"></textarea>
             <input type="submit" value="WYŚLIJ"/>
           </form>
          </div>
@@ -172,12 +172,12 @@
 
   <div class="footer">
     <div class="footer__container">
-      <p class="footer__copyright">© Match-UP.me</p>
+      <p class="footer__copyright">© Match-up.me</p>
       <a href="#" class="footer__policy">Polityka prywatności</a>
       <li class="footer__list">
-        <a href=""><img src="" alt="" class="footer__icon"></a>
-        <a href=""><img src="" alt="" class="footer__icon"></a>
-        <a href=""><img src="" alt="" class="footer__icon"></a>
+        <a href="" class="footer_link"><img src="img/icon_fb.png" alt="" class="footer__icon" width="40" height="40" ></a>
+        <a href="" class="footer_link"><img src="img/icon_insta.png" alt="" class="footer__icon" width="40" height="40" ></a>
+        <a href="" class="footer_link"><img src="img/icon_link.png" alt="" class="footer__icon" width="40" height="40"></a>
       </li>
     </div>
   </div>
