--- a/index.html
+++ b/index.html
@@ -1,22 +1,70 @@
+
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,600&amp;subset=latin-ext" rel="stylesheet">
+  <title>Matchup - Najprostszy sposób na znalezenie pracy</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="js/jquery.js"></script>
-</head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133314720-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-133314720-1');
+  </script>
+
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TN8MT77');
+  </script>
+
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '352599845590515');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=352599845590515&ev=PageView&noscript=1"
+/></noscript>
+
+</head>
 <body>
+
+<div id="simplecookienotification_v01" style="display: block; z-index: 99999; min-height: 35px; width: 100%; background: rgb(227, 242, 253); border-bottom: 1px solid rgb(30, 136, 229); border-image: initial; text-align: center; right: 0px; top: 0px; color: rgb(119, 119, 119); left: 0px; border-top-color: rgb(30, 136, 229); border-right-color: rgb(30, 136, 229); border-left-color: rgb(30, 136, 229); border-radius: 0px;">
+<div style="padding:10px; margin-left:15px; margin-right:15px; font-size:14px; font-weight:normal;">
+<span id="simplecookienotification_v01_powiadomienie">Używamy cookies w celach funkcjonalnych, aby ułatwić użytkownikom korzystanie z witryny oraz w celu tworzenia anonimowych statystyk serwisu. Jeżeli nie blokujesz plików cookies,<br> to zgadzasz się na ich używanie oraz zapisanie w pamięci urządzenia.</span><span id="br_pc_title_html"><br></span>
+<a id="simplecookienotification_v01_polityka" href="policy.html" style="color: rgb(30, 136, 229);">Polityka Prywatności</a><span id="br_pc2_title_html"> &nbsp;&nbsp; </span>
+<a id="simplecookienotification_v01_info" href="" style="color: rgb(30, 136, 229);"></a><div id="jwc_hr1" style="height: 10px; display: none;"></div>
+<a id="okbutton" href="javascript:simplecookienotification_v01_create_cookie('simplecookienotification_v01',1,7);" style="position: absolute; background: rgb(30, 136, 229); color: rgb(255, 255, 255); padding: 5px 15px; text-decoration: none; font-size: 12px; font-weight: normal; border: 0px solid rgb(227, 242, 253); border-radius: 5px; top: 5px; right: 5px;">OK</a><div id="jwc_hr2" style="height: 10px; display: none;"></div>
+</div>
+</div>
+<script type="text/javascript">var galTable= new Array(); var galx = 0;</script><script type="text/javascript">function simplecookienotification_v01_create_cookie(name,value,days) { if (days) { var date = new Date(); date.setTime(date.getTime()+(days*24*60*60*1000)); var expires = "; expires="+date.toGMTString(); } else var expires = ""; document.cookie = name+"="+value+expires+"; path=/"; document.getElementById("simplecookienotification_v01").style.display = "none"; } function simplecookienotification_v01_read_cookie(name) { var nameEQ = name + "="; var ca = document.cookie.split(";"); for(var i=0;i < ca.length;i++) { var c = ca[i]; while (c.charAt(0)==" ") c = c.substring(1,c.length); if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length); }return null;}var simplecookienotification_v01_jest = simplecookienotification_v01_read_cookie("simplecookienotification_v01");if(simplecookienotification_v01_jest==1){ document.getElementById("simplecookienotification_v01").style.display = "none"; }</script>
+
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN8MT77"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
 
   <header class="header">
     <div class="header__block">
       <div class="header__wrapper">
-        <a href="index.html"><img src="img/logo.png" class="header__logo" alt="MatchUp" width="200" height="40"></a>
+        <a href="index.html"><img src="img/logo.png" class="header__logo" alt="Matchup" width="200" height="50"></a>
         <ul class="header__nav">
           <li class="nav__item"><a href="bot.html">Start</a></li>
           <li class="nav__item"><a href="#student">Usługa</a></li>
@@ -24,16 +72,15 @@
         </ul>
       </div>
 
-
     </div>
     <div class="header__back">
       <div class="header__img--block">
         <img src="img/background.png" alt="" class="header__img" width="550" height="550">
       </div>
       <div class="header__container">
-        <h2 class="header__main">Najprostszy sposób na znalezenie pracy</h2>
+        <h2 class="header__main">Najprostszy sposób na znalezienie pracy</h2>
         <p class="header__motto">Określ swoje potrzeby dotyczące nowej pracy w krótkiej rozmowie z chatbotem. Otrzymaj dopasowane oferty szybko i bez stresu.</p>
-        <a href="bot.html" class="header__link button">Start kariery</a>
+        <a href="employee.html" class="header__link button">Start kariery</a>
       </div>
     </div>
 
@@ -45,33 +92,33 @@
   <main>
     <div class="main__wrapper">
       <div class="student__wrapper">
-        <h1 class="main__headline">Tutaj będzie headline </h1>
+        <h1 class="main__headline">Uzyskaj dostęp do rynku pracy za pomocą jednej konwersacji</h1>
 
         <div class="student__advantages" id="student">
           <div class="student-advantages__container">
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_time.png" alt="" class="advantages__image" width="124" height="124"/>
-              <p class="advantages__item">Świeżość</p>
-              <p class="advantages__text">Matchup to nie jest kolejna strona z ogłoszeniami Zmieniamy zasady. Mówisz czego potrzebujesz, a potem czekasz na oferty od pracodawców, którzy zapoznali się już z Twoim profilem  i wiedzą jaki masz potencjał. Nie ma złych odpowiedzi.</p>
+              <p class="advantages__item">Zapomnij o ogłoszeniach</p>
+              <p class="advantages__text">Matchup to nie jest kolejna strona z ogłoszeniami. Zmieniamy zasady. Mówisz czego potrzebujesz, a potem akceptujesz oferty od pracodawców, którzy zapoznali się już z Twoim profilem i wiedzą, jaki masz potencjał. Nie ma złych odpowiedzi.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_accuracy.png" alt="" class="advantages__image" width="124" height="124"/>
               <p class="advantages__item">Kolejny formularz?</p>
-              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie informacje, których potrzebujemy zapyta Cię nasz chatbot  - musisz jedynie podążać za jego instrukcjami i wpisać swoje odpowiedzi w okno konwersacji.</p>
+              <p class="advantages__text">Nie. Czas formularzy przemija. O wszystkie informacje, których potrzebujemy zapyta Cię nasz chatbot - musisz jedynie podążać za jego instrukcjami i wpisać swoje odpowiedzi w okno konwersacji.</p>
             </div>
 
             <div class="advantages__block advantages__block--student">
               <img src="img/icon_security.png" alt="" class="advantages__image" width="124" height="124"/>
-              <p class="advantages__item">Dopasuj się</p>
-              <p class="advantages__text">Najważniejszym elementem jest nasz system dopasowania. Określ swoje wymagania i umiejętności a my zadbamy o to, żebyś otrzymał oferty pracy dopasowane do Twoich oczekiwań.</p>
+              <p class="advantages__item">Efektywna rekrutacja</p>
+              <p class="advantages__text">Najważniejszym elementem jest nasz system dopasowania. Określ swoje wymagania i umiejętności, a my zadbamy o to, żebyś otrzymał oferty pracy dopasowane do Twoich oczekiwań.</p>
             </div>
           </div>
         </div>
       </div>
 
           <div class="student__headline">
-            <p class=" student__headline">Wymarzona praca w 4 krokach</p>
+            <p class=" student__headline">Sprawdź jak działa Matchup</p>
           </div>
 
         <div class="student__block" id="anchor">
@@ -81,9 +128,9 @@
 
 
             <div class="student-text__container">
-              <p class="student__text student__text--begin">Kliknij przycisk „start kariery” </p>
+              <p class="student__text student__text--begin">Rozpocznij rozmowę z naszym botem</p>
               <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
-              <p class="student__text">Porozmawiaj z naszym botem</p>
+              <p class="student__text">Wybierz swoją branżę</p>
               <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
               <p class="student__text student__text--third">Opowiedz nam o swoich oczekiwaniach i umiejętnościach</p>
                 <img src="img/arrow.png" alt="arrow" class="student__arrow" width="100" height="80">
@@ -96,7 +143,7 @@
 
         <div class="life__container">
           <div class="life__wrapper">
-            <h2 class="life__headline">Czasochłonne przeszukiwanie ogłosze i hurtowe rozsyłanie CV? Omiń te kroki z Matchup!</h2>
+            <h2 class="life__headline">Matchup pomoże Ci w wejściu na rynek pracy, znalezieniu nowego stanowiska lub zmianie branży. Możliwe też, że we wszystkim na raz.</h2>
             <a href="bot.html" class="life__button button">Start kariery</a>
           </div>
           <div class="life-container__img">
@@ -110,8 +157,8 @@
             <div class="faq-question">
               <input id="q1" type="checkbox" class="panel">
               <div class="plus">+</div>
-              <label for="q1" class="panel-title">Czym zajmuje  się MatchUp?</label>
-              <div class="panel-content">MatchUP jest nową platformą internetową łączącą w przejrzysty sposób
+              <label for="q1" class="panel-title">Czym zajmuje  się Matchup?</label>
+              <div class="panel-content">Matchup jest nową platformą internetową łączącą w przejrzysty sposób
                 pracodawców i pracowników. Dzięki niej znajdziesz pracę, która będzie dostosowana
                 do twoich potrzeb.</div>
             </div>
@@ -119,7 +166,7 @@
             <div class="faq-question">
               <input id="q2" type="checkbox" class="panel">
               <div class="plus">+</div>
-              <label for="q2" class="panel-title">Czy korzystanie z MatchUp jest bezpieczne?</label>
+              <label for="q2" class="panel-title">Czy korzystanie z Matchup jest bezpieczne?</label>
               <div class="panel-content">Oczywiście! Działamy zgodnie z zasadami polityki ochrony danych osobowych.
                 Twoje dane osobowe trafiają bezpośrednio do pracodawcy.</div>
             </div>
@@ -127,14 +174,14 @@
             <div class="faq-question">
               <input id="q3" type="checkbox" class="panel">
               <div class="plus">+</div>
-              <label for="q3" class="panel-title">Czy MatchUp jest bezpłatny?</label>
+              <label for="q3" class="panel-title">Czy Matchup jest bezpłatny?</label>
               <div class="panel-content">Tak. Nie ponosisz żadnych kosztów za korzystanie z naszej platformy.</div>
             </div>
 
             <div class="faq-question">
               <input id="q4" type="checkbox" class="panel">
               <div class="plus">+</div>
-              <label for="q4" class="panel-title">Czy moje wynagrodzenie nie będzie niższe przez korzystanie z usług MatchUpu?</label>
+              <label for="q4" class="panel-title">Czy moje wynagrodzenie nie będzie niższe przez korzystanie z usług Matchupu?</label>
               <div class="panel-content">Twoje wynagrodzenie będzie dokładnie takie samo, jak gdybyś sam znalazł tę ofertę.</div>
             </div>
 
@@ -148,7 +195,7 @@
             <div class="faq-question">
               <input id="q6" type="checkbox" class="panel">
               <div class="plus">+</div>
-              <label for="q6" class="panel-title">Czy mogę skorzystać z MatchUpu jeżeli obecnie nie szukam pracy?</label>
+              <label for="q6" class="panel-title">Czy mogę skorzystać z Matchupu jeżeli obecnie nie szukam pracy?</label>
               <div class="panel-content">Możesz zostawić swoje dane na naszej platformie i być na bieżąco z najlepszymi
                 ofertami pracy.</div>
             </div>
@@ -160,7 +207,7 @@
           </div>
 
         <div class="form__container"  id="contact">
-          <form action="https://formspree.io/alexlitvinovskiy@gmail.com" method="POST" />
+          <form action="https://formspree.io/alex@match-up.pl" method="POST" />
             <input name="name" type="text" class="feedback-input" placeholder="Imię i nazwisko" />
             <input name="email" type="text" class="feedback-input" placeholder="E-mail" />
             <textarea name="name" class="feedback-input" placeholder="Wiadomość"></textarea>
@@ -172,17 +219,20 @@
 
   <div class="footer">
     <div class="footer__container">
-      <p class="footer__copyright">© Match-up.me</p>
-      <a href="#" class="footer__policy">Polityka prywatności</a>
-      <li class="footer__list">
-        <a href="" class="footer_link"><img src="img/icon_fb.png" alt="" class="footer__icon" width="40" height="40" ></a>
-        <a href="" class="footer_link"><img src="img/icon_insta.png" alt="" class="footer__icon" width="40" height="40" ></a>
-        <a href="" class="footer_link"><img src="img/icon_link.png" alt="" class="footer__icon" width="40" height="40"></a>
-      </li>
+      <p class="footer__copyright">© Match-up.pl</p>
+      <a href="policy.html" class="footer__policy">Polityka prywatności</a>
+      <ul class="footer__list">
+        <li class="footer__li"><a href="cheers.html" class="footer_link"><img src="img/icon_fb.png" alt="" class="footer__icon" width="40" height="40" ></a></li>
+        <li class="footer__li"><a href="#" class="footer_link"><img src="img/icon_insta.png" alt="" class="footer__icon" width="40" height="40"></a></li>
+        <li class="footer__li"><a href="#" class="footer_link"><img src="img/icon_link.png" alt="" class="footer__icon" width="40" height="40"></a></li>
+      </ul>
     </div>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/script.js"></script>
+
 
 </body>
 
